A little change on format

--- a/paper.tex
+++ b/paper.tex
@@ -335,7 +335,7 @@ def Step2_3DFiltering(BlockGroup_basic, BlockGroup_noisy):
 
 
 \section{GraphCut \& GrabCut：静态与交互式的对比和拓展}
-GraphCut是一种于2001年提出的常用于图像分割的算法\cite{boykov_interactive_2001}，基于图论的最小割问题。图像分割的目标是将图像划分为不同的区域，Graph\\Cut算法通过构造一个图，并通过最小化割的代价来实现分割。图的节点代表图像中的像素，而边则表示像素之间的关系。每一对相邻像素之间的边连接了它们的相似性（通常是颜色或亮度的相似性）。GraphCut算法的核心思想是通过最小化一个能量函数来找到最佳的像素划分。\par
+GraphCut是一种于2001年提出的常用于图像分割的算法\cite{boykov_interactive_2001}，基于图论的最小割问题。图像分割的目标是将图像划分为不同的区域，GraphCut算法通过构造一个图，并通过最小化割的代价来实现分割。图的节点代表图像中的像素，而边则表示像素之间的关系。每一对相邻像素之间的边连接了它们的相似性（通常是颜色或亮度的相似性）。GraphCut算法的核心思想是通过最小化一个能量函数来找到最佳的像素划分。\par
 该能量函数由两部分组成：数据项和光滑项。数据项衡量像素分配到某个类的代价，而光滑项则惩罚相邻像素分配到不同类的情况。数据项通常用像素与前景或背景的相似性来表示，而光滑项则考虑到图像中像素之间的相似性。能量函数的形式可以表示为：
 \[
 E(f) = \sum_i D_i(f_i) + \sum_{i,j} V_{ij}(f_i, f_j)
